# Alt-Ctrl-Proj

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  clustering_refactoring_report.md  duplicate_logic_report.md  main.py  pyproject.toml  pyproject.toml_  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  strcture.txt  structure.txt  xer_explorer.py
.github/: copilot-instructions.md
.github/arch/: _test.yml_  codeql-analysis.yml  publish.yml
.github/instructions/: typing_of_getters_side-effect.instructions.md  typing_of_special_methods.instructions.md
.github/workflows/: build-docs-pdf.yml  build.yml  publish.yml  test.yml
_build/doctrees/: api_reference.doctree  development.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  introduction.doctree  tools.doctree
docs/: tree.txt
docs/code2tutorial/: 01_reader_.md  02_data_collections_.md  03_project_.md  04_task__activity__.md  05_wbs__work_breakdown_structure__.md  06_relationship__taskpred__.md  07_resource_.md  08_dcma14_analysis_.md  index.md
docs/source/: api_reference.rst  conf.py  development.rst  examples.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  tools.rst
docs/source/_templates/: layout.html
examples/: explore_xer.py
scripts/: xer_explorer.py
src/xer_parser/: __init__.py  reader.py  write.py
src/xer_parser/dcma14/: __init__.py  analysis.py
src/xer_parser/model/: accounts.py  activitiyresources.py  activitycodes.py  activityresources.py  acttypes.py  calendars.py  currencies.py  fintmpls.py  nonworks.py  obss.py  pacttypes.py  pcatvals.py  predecessors.py  projcats.py  projects.py  rcattypes.py  rcatvals.py  resources.py  rolerates.py  roles.py  rsrccats.py  rsrccurves.py  rsrcrates.py  schedoptions.py  taskactvs.py  taskprocs.py  tasks.py  udftypes.py  udfvalues.py  wbss.py
src/xer_parser/model/classes/: account.py  activitycode.py  acttype.py  calendar.py  calendar_data.py  currency.py  data.py  fintmpl.py  nonwork.py  obs.py  pcattype.py  pcatval.py  projcat.py  project.py  rcattype.py  rcatval.py  role.py  rolerate.py  rsrc.py  rsrccurv.py  rsrcrate.py  rsrcrcat.py  schedoption.py  task.py  taskactv.py  taskpred.py  taskproc.py  taskrsrc.py  udftype.py  udfvalue.py  wbs.py
src/xer_parser/tools/: explorer.py
tests/: .pylintrc  conftest.py  test_dcma14.py  test_explorer.py  test_improvements.py  test_main.py  test_reader.py  test_write.py
xerparser_dev/: __init__.py  reader.py  write.py
xerparser_dev/dcma14/: __init__.py  analysis.py
xerparser_dev/model/: accounts.py  activitiyresources.py  activitycodes.py  acttypes.py  calendars.py  currencies.py  fintmpls.py  nonworks.py  obss.py  pacttypes.py  pcatvals.py  predecessors.py  projcats.py  projects.py  rcattypes.py  rcatvals.py  resources.py  rolerates.py  roles.py  rsrccats.py  rsrccurves.py  rsrcrates.py  schedoptions.py  taskactvs.py  taskprocs.py  tasks.py  udftypes.py  udfvalues.py  wbss.py
xerparser_dev/model/classes/: activitycode.py  acttype.py  calendar.py  obs.py  p6codes.py  pcattype.py  project.py  rcattype.py  rcatval.py  role.py  rsrc.py  task.py  taskproc.py  taskrsrc.py  udfvalue.py  wbs.py
xerparser_dev/tools/: __init__.py  explorer.py
