
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyP6Xer-dev"
version = "0.0.3" # Normalized version, follows PEP 440
description = "An actively maintained fork of PyP6Xer-dev: A Python parser for Primavera XER files."
readme = "README.md"
authors = [
    { name = "Osama Ata", email = "me@osamata.com" },
    { name = "Hassan Emam", email = "hassan.emam@hotmail.com" },

]
license = { text = "GPL-3.0-or-later" } # More modern and correct format
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/osama-ata/PyP6Xer-dev"
"Documentation" = "https://github.com/osama-ata/PyP6Xer-dev"
"Source" = "https://github.com/osama-ata/PyP6Xer-dev"
"Issues" = "https://github.com/osama-ata/PyP6Xer-dev/issues"

[project.scripts]
xer-explorer = "xerparser_dev.tools.explorer:main"

[tool.setuptools]
packages = [
    "xerparser_dev",
    "xerparser_dev.dcma14",
    "xerparser_dev.model",
    "xerparser_dev.model.classes",
    "xerparser_dev.tools",
]
